* Fix bug #47370 (BC breakage of array_unique())